--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker compose build
+      - uses: actions/checkout@v4
+      - name: Get the docker repo
+        
+      - name: Log in to Docker Hub
+        uses: docker/login-action@latest
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build images with Docker Compose
+        run: docker-compose build
+      
+      - name: Push images
+        run: docker-compose push
