--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build images with Docker Compose
-        run: docker-compose build
+        run: docker compose build
       
       - name: Push images
-        run: docker-compose push
+        run: docker compose push
