--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,4 @@ jobs:
         run: docker compose build
       
       - name: Push images
-        run: docker compose push
+        run: docker compose push moovenn/virtualisation-app:tagname
