--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   app1-fastapi:
+    image: moovenn/virtualisation-app1-fastapi:${IMAGE_TAG:-latest}
     build:
       context: ./app1/backend
     ports:
@@ -10,6 +11,7 @@ services:
       - app1-database
   
   app1-database:
+    image: moovenn/virtualisation-app1-fastapi:${IMAGE_TAG:-latest}
     build:
       context: ./app1/database
     ports:
@@ -18,6 +20,7 @@ services:
      - app1
 
   app2-fastapi:
+    image: moovenn/virtualisation-app1-fastapi:${IMAGE_TAG:-latest}
     build:
       context: ./app2/backend
     ports:
